--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     background-color: rgb(26, 31, 71);
     width: 100vw;
-    height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 #logo-navbar{
     height: 50px;
@@ -12,8 +16,15 @@ body{
 .off-screen-menu{
     display: none;
 }
-h1{
-    font-size: 6vw;
+.hjem-innhold{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25vh;
+    gap: 20px;
+    color: white;
+}
+.box1{
+    outline: solid rgb(120, 120, 120);
 }
 p{
     text-decoration: none;
@@ -68,17 +79,35 @@ p{
     margin-bottom: 25px;
 }
 /*button styling*/
+#video1{
+    width: 100vw;
+    aspect-ratio: 16/9;
+    object-fit: cover;
+    margin-top: 25vh;
+}
+nav{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    padding: 0 5vw 0 5vw;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    backdrop-filter: blur(20px);
+
+
+}
 .navbar{
     display: flex;
     justify-content: space-between;
-    backdrop-filter: blur(20px);
+    width: 100%;
     border: solid;
     border-top: none;
     border-left: none;
     border-right: none;
     border-color: white;
-    margin-left: 20px;
-    margin-right: 20px;
+    align-items: center;
 }
 .navbar-knapper{
     display: flex;
@@ -89,7 +118,7 @@ p{
     display: grid;
     grid-template-columns: 100%;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 25vh;
     color: white;
     font-family: 'Times New Roman', Times, serif;
     font-size: xx-large;
