--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body{
     padding: 50px 30px 50px 30px;
     background-color: rgb(48, 53, 90);
     border: 1px solid white;
-    transition: 0.5s ease-in-out;
+    transition: 2s cubic-bezier(0.075, 0.82, 0.165, 1);
     cursor: pointer;
 }
 .box:hover{
@@ -56,7 +56,7 @@ p{
     font-family: sans-serif;
     color: white;
     cursor: pointer;
-    transition: 0.5s;
+    transition: 2s cubic-bezier(0.075, 0.82, 0.165, 1);
     position: relative;
     overflow: hidden;
     border-radius: 5px;
@@ -75,7 +75,7 @@ p{
     width: 100%;
     height: 0%;
     background: rgb(26, 31, 71);
-    transition: 0.5s;
+    transition: 2s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .btn::before{
     bottom: 0;
@@ -135,13 +135,29 @@ nav{
     gap: 15px;
 }
 .innhold-hjem{
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    top: 30vh;
+    align-items: center;
+    position: relative;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    border-radius: 100%;
+    aspect-ratio: 1/1;
+    height: 30vw;
+    min-height: 400px;
+    border: solid gray 1px;
     grid-template-columns: 100%;
     text-align: center;
     margin-top: 25vh;
     color: white;
     font-family: 'Times New Roman', Times, serif;
     font-size: xx-large;
+    transition: 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.innhold-hjem:hover{
+    background-color: rgb(48, 53, 90);
 }
 
 
