--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,41 @@ body{
 .off-screen-menu{
     display: none;
 }
+.down-arrow {
+    position: absolute;
+    top: calc(100vh - 60px);
+    left: calc(50% - 0px);
+    width: 0;
+    height: 30px;
+    border: 2px  white solid;
+    border-radius: 2px;
+    animation: jumpInfinite 1.5s infinite;
+  }
+  
+  .down-arrow:after {
+    content: " ";
+    position: absolute;
+    top: 12px;
+    left: -10px;
+    width: 16px;
+    height: 16px;
+    border-bottom: 4px white solid;
+    border-right: 4px white solid;
+    border-radius: 4px;
+    transform: rotateZ(45deg);
+  }
+  @keyframes jumpInfinite {
+    0% {
+      margin-top: 0;
+    }
+    50% {
+      margin-top: 10px;
+    }
+    100% {
+      margin-top: 0;
+    }
+  }
+
 .hjem-innhold{
     display: grid; 
   grid-auto-columns: 1fr; 
