--- a/styles.css
+++ b/styles.css
@@ -218,6 +218,28 @@ nav{
 
 @media screen and (max-width:900px) {
 
+    .footer{
+        border: solid 1px gray;
+        border-radius: 10px;
+        height: 60vh;
+        color: white;
+        text-decoration: none;
+        background-color: rgb(48, 53, 90);
+        display: flex;
+        width: 100vw;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .footer5{
+        display: none;
+    }
+    .footer2{
+        display: none;
+    }
+    .footer3{
+        display: none;
+    }
+
     .down-arrow {
         position: absolute;
         top: calc(95vh - 60px);
