--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ html,
 body{
     background-color: rgb(26, 31, 71);
     width: 100vw;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 #logo-navbar{
     height: 50px;
